# tslyriccompletion

./: .gitignore  .gitmodules  Cargo.toml  README.md  migration_steps.txt  new_lyrics_notes.md  todo_list.txt
client/: .eslintrc.json  package-lock.json  package.json  run_build.sh
client/public/: index.html  manifest.json
client/src/: App.css  App.js  index.js
lyrics_data/01_Taylor_Swift/: 01_tim-mcgraw.txt  02_picture-to-burn.txt  03_teardrops-on-my-guitar.txt  04_a-place-in-this-world.txt  05_cold-as-you.txt  06_the-outside.txt  07_tied-together-with-a-smile.txt  08_stay-beautiful.txt  09_shouldve-said-no.txt  10_marys-song.txt  11_our-song.txt  12_im-only-me-when-im-with-you.txt  13_invisible.txt  14_a-perfectly-good-heart.txt
lyrics_data/02_Fearless/: 01_fearless-tv.txt  02_fifteen-tv.txt  03_love-story-tv.txt  04_hey-stephen-tv.txt  05_white-horse-tv.txt  06_you-belong-with-me-tv.txt  07_breathe-tv.txt  08_tell-me-why-tv.txt  09_youre-not-sorry-tv.txt  10_the-way-i-loved-you-tv.txt  11_forever-n-always-tv.txt  12_the-best-day-tv.txt  14_jump-then-fall-tv.txt  15_untouchable-tv.txt  17_come-in-with-the-rain-tv.txt  18_superstar-tv.txt  19_the-other-side-of-the-door-tv.txt  20_today-was-a-fairytale-tv.txt  21_you-all-over-me-tv-ftv.txt  (+4 more)
lyrics_data_new/: fix-chars.py
report_generator/: main.py  notes.txt  report_template.txt
server/: Cargo.toml  README.md  run_build.sh
server/src/: feedback.rs  game.rs  guess_generating.rs  history.rs  leaderboard.rs  lifelines.rs  loader.rs  loader_v2.rs  main.rs  rss.rs  song.rs  stats.rs
server/src/auth/: bearer_token.rs  login.rs  logout.rs  mod.rs  password_reset.rs  personal_details.rs  profile.rs  signup.rs  verify_email.rs
server/src/diff/: mod.rs  negative_array.rs
server/src/history/: line_history.rs  mod.rs
src/: game.rs  guess_generating.rs  lifelines.rs  loader.rs  lyric_converter.py  main.rs  song.rs
(+720 files in other folders)
