[package]
name = "tslyriccompletion"
version = "0.1.0"
edition = "2021"
description = "The back end server of a Taylor Swift Lyric Completion game."
license = "GPL-2.0-or-later"
repository = "https://github.com/EricWu2003/tslyriccompletion"
keywords = ["Taylor Swift", "rocket", "http", "MySQL"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"] }
include_dir = "0.7.2"
edit-distance = "2.1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "mysql", "json", "time"]}
sha1 = "0.10.5"
dotenv = "0.15.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev]
opt-level = 'z' # Optimize for size


[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

